--- a/styles.css
+++ b/styles.css
@@ -50,11 +50,19 @@ L'utilisateur vois seulement wrapper, donc uniquement la page1
 nav{
     position: fixed;
     left: 10px;
+    z-index: 10;
 }
 ul{
     list-style: none;
 }
 .animation{
     transform: translateX( -100% );
+    transition: transform 500ms;
+}
+.reversed{
+    transform: translateX( -100% );
+}
+.animation-reverse {
+    transform: translateX( 0% );
     transition: transform 500ms;
 }
